refactor(api): get /orders/complete-image 인터페이스 수정
- get /orders/complete-image -> /orders/{orderId}/complete-image
- 기존 검증스키마를 공통 검증 스키마 orderIdParamSchema로 교체
- multer 타입 패키지 설치
- api 문서 업데이트
